Version 1.0.4
---------------------------
+ Fixed waiting time setting

Version 1.0.3
---------------------------
+ Removed error message from report if no reasons created
+ Added the time of arrival to the report
+ Changed report date entry interface (jquery datepicker)

Version 1.0.2
---------------------------
9 June 2009
+ Added "Send back" condition
+ Patch #2795890 - translation typo fixed. Thanks Hanv.

Version 1.0.1
---------------------------
15 January 2009
+ Added time arrived to assignment listing
+ Added ability to sort staff for assignment list.
+ Added switch for whether staff see unassigned visitors.
+ Visitors will not be set to staff that are unavailable.
+ Reasons saved separately from staff save. Prevents reasons getting cleared.

9 January 2009
+ Fixed bug with pulling current staff member
+ Added refresh link to waiting and assignment page
+ Fixed report
+ Updated: templates/visitors.tpl, templates/waiting.tpl

Version 1.0.0
--------------------------
18 July 2008
+ Finalized for download.