@@ -1,3 +1,5 @@
++ Visitor must enter a reason
+
 Version 1.0.4
 ---------------------------
 + Fixed waiting time setting
